# telepathy-mission-control-sharp

./: Makefile.am  autogen.sh  configure.ac  configure.in
sources/: AssemblyInfo.cs.in  Makefile.am  missioncontrol-sharp-sources.xml  missioncontrol-sharp.metadata  missioncontrol-sharp.snk  telepathy-mission-control-sharp-4.67-sources.xml  telepathy-mission-control-sharp-api-4.67.raw  telepathy-mission-control-sharp.metadata
